<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation"
	>
	<string name="app_name" translatable="false">NEM</string>
	<string name="toolbar_btn_qr" translatable="false">QR</string>
	<string name="title_activity_qr_tabs" translatable="false">QR</string>
	<string name="label_balance_xems" translatable="false">%1$s XEM</string>
	<string name="lang_name_de" translatable="false">Deutsch</string>
	<string name="lang_name_en" translatable="false">English</string>
	<string name="lang_name_es" translatable="false">Español</string>
	<string name="lang_name_fi" translatable="false">Suomi</string>
	<string name="lang_name_ru" translatable="false">Русский</string>
	<string name="lang_name_pl" translatable="false">Polski</string>
	<string name="lang_name_zh" translatable="false">中文</string>
	<string name="lang_name_fr" translatable="false">Français</string>
	<string name="lang_name_ko" translatable="false">한국어</string>
	<string name="lang_name_hr" translatable="false">Magyar</string>
	<string name="lang_name_pt" translatable="false">Português</string>
	<string name="lang_name_nl" translatable="false">Nederlands</string>
	<string name="lang_name_ja" translatable="false">日本語</string>
	<string name="lang_name_it" translatable="false">Italiano</string>
	<string name="lang_name_lt" translatable="false">Lietuvių</string>
	<string name="lang_name_in" translatable="false">Indonesian</string>
	<string name="title_activity_create_account">Create Account</string>
	<string name="title_activity_account_list">Accounts</string>
	<string name="errormessage_account_name_empty">Please enter your name</string>
	<string name="errortext_password_too_short">Please enter minimum 6 symbols</string>
	<string name="text_error">Error</string>
	<string name="title_activity_import_key">Import Private Key</string>
	<string name="title_activity_scan_qr">Scan Account</string>
	<string name="errormessage_device_doesnt_have_camera">Camera is not available on this device</string>
	<string name="title_activity_dashboard">Dashboard</string>
	<string name="text_XEM">XEM</string>
	<string name="errormessage_internal_error">Internal error</string>
	<string name="text_OK">OK</string>
	<string name="placeholder_input_message">Enter message here</string>
	<string name="errormessage_invalid_address">Invalid address</string>
	<string name="text_CANCEL">Cancel</string>
	<string name="title_activity_export_account">Export Account</string>
	<string name="errormessage_not_nem_compatible_qr">Not a NEM QR!</string>
	<string name="input_hint_name">Name</string>
	<string name="input_hint_amount">Amount</string>
	<string name="input_hint_message">Message</string>
	<string name="errormessage_failed_to_save_invoice">Failed to save invoice</string>
	<string name="errormessage_invoice_not_found">Invoice #%1$s not found</string>
	<string name="errortext_invalid_private_key">Invalid private key</string>
	<string name="errortext_empty_address">Address cannot be empty</string>
	<string name="errortext_invalid_address">Invalid address</string>
	<string name="errormessage_failed_to_create_transaction">Failed to create transaction</string>
	<string name="errormessage_error_occured">An error has occurred</string>
	<string name="dialog_message_transaction_announced">Transaction sent!</string>
	<string name="dialog_transaction_announce_failed">Sending failed! %1$s</string>
	<string name="errormessage_account_creation_failed">Failed to create account!</string>
	<string name="errormessage_no_network_connection">No network connection!</string>
	<string name="progress_dialog_wait_message">Please wait…</string>
	<string name="errormessage_failed_to_get_account_info">Failed to get account info!</string>
	<string name="placeholder_no_message">No message</string>
	<string name="progress_dialog_message_sending_in_progress">Sending…</string>
	<string name="nem_contact_type">NEM</string>
	<string name="content_description_icon">Icon</string>
	<string name="content_description_delete_icon">Delete</string>
	<string name="placeholder_encrypted_message">&lt;Encrypted></string>
	<string name="errormessage_decryption_failed">Decryption failed!</string>
	<string name="content_description_splash_image">Splash screen image</string>
	<string name="input_hint_min_cosignatories">Minimum number of cosigners</string>
	<string name="btn_convert_to_multisig">Convert</string>
	<string name="errormessage_invalid_min_cosignatories_number">Enter minimum 1 cosignatory</string>
	<string name="errormessage_invalid_public_key_entered">Invalid public key</string>
	<string name="message_dont_show_again">Don\'t show this again</string>
	<string name="dialog_title_warning">Warning</string>
	<string name="errormessage_select_sender_account">Select sender first!</string>
	<string name="label_from_colon">From:</string>
	<string name="button_confirm_text">Confirm</string>
	<string name="label_to_colon">To:</string>
	<string name="label_message_colon">Message:</string>
	<string name="label_amount_colon">Amount:</string>
	<string name="label_deadline_colon">Deadline:</string>
	<string name="label_min_cosignatories_colon">Min cosignatories:</string>
	<string name="label_changes_colon">Changes:</string>
	<string name="title_activity_map">Map</string>
	<string name="errormessage_media_not_accessible">Media not accessible.\nTry to disconnect your device from computer and/or check your SD card.</string>
	<string name="errormessage_storage_dir_not_writable">Cannot write to storage!</string>
	<string name="title_activity_address_book">Address Book</string>
	<string name="content_description_nem_contact">NEM contact</string>
	<string name="errormessage_failed_to_get_contacts">Failed to get device contacts!</string>
	<string name="dialog_title_enter_nem_address">Enter NEM address</string>
	<string name="errormessage_account_already_exists">Account already exists.</string>
	<string name="input_hint_invoice_message">Message</string>
	<string name="input_hint_invoice_prefix">Prefix</string>
	<string name="input_hint_invoice_postfix">Postfix</string>
	<string name="label_invoice_message_overall_length">Overall length: %1$d/%2$d</string>
	<string name="errormessage_message_too_long">Message too long!</string>
	<string name="email_body_share_invoice">NEM invoice from %1$s: %2$s</string>
	<string name="email_subject_share_invoice">NEM Invoice from %1$s</string>
	<string name="action_chooser_share_invoice">Share invoice</string>
	<string name="message_account_imported">%1$s imported</string>
	<string name="errormessage_failed_to_init_camera">Failed to init camera! It may be locked by another app.</string>
	<string name="errormessage_host_empty">Host cannot be empty</string>
	<string name="errormessage_invalid_hostname">Invalid hostname</string>
	<string name="errormessage_port_required">Port is required</string>
	<string name="errormessage_invalid_port_range">Invalid port (1–65535)</string>
	<string name="title_activity_login">Login</string>
	<string name="title_activity_splash">NEM</string>
	<string name="input_hint_protocol">Protocol</string>
	<string name="input_hint_hostname_or_ip">Hostname or IP</string>
	<string name="input_hint_port">Port (default 7890)</string>
	<string name="btn_add_custom_server">Add Custom Server</string>
	<string name="errormessage_invalid_protocol">Only http is supported</string>
	<string name="btn_log_in">Log In</string>
	<string name="title_password_request_dialog">Enter password</string>
	<string name="title_activity_add_account">Add Account</string>
	<string name="btn_create_new_account">Create</string>
	<string name="btn_scan_qr">Scan QR</string>
	<string name="btn_import_key">Enter Key</string>
	<string name="progress_dialog_message_password_checking">Checking…</string>
	<string name="errormessage_invalid_password">Invalid password</string>
	<string name="input_hint_create_account_name">Account Name</string>
	<string name="input_hint_private_key">Private Key</string>
	<string name="btn_add_account">Add Account</string>
	<string name="btn_edit">edit</string>
	<string name="toolbar_btn_edit">Edit</string>
	<string name="message_account_deleted">Deleted %1$s</string>
	<string name="action_undo">Undo</string>
	<string name="btn_inputgroup_create_account">Create</string>
	<string name="toolbar_btn_done">Done</string>
	<string name="title_dialog_add_server">Add server</string>
	<string name="progress_dialog_message_waiting_for_server">Loading…</string>
	<string name="errormessage_http_request_failed">Request failed!</string>
	<string name="errormessage_no_server">No valid server</string>
	<string name="dialog_title_account_export_password">Set export password</string>
	<string name="dialog_title_account_import_password">Enter import password</string>
	<string name="toolbar_btn_dashboard">Dashboard</string>
	<string name="toolbar_btn_addr_book">Address Book</string>
	<string name="toolbar_btn_more">More</string>
	<string name="title_activity_servers_list">Servers</string>
	<string name="title_activity_more">More</string>
	<string name="message_server_deleted">Deleted %1$s</string>
	<string name="more_item_accounts">Switch Account</string>
	<string name="more_item_map">Map</string>
	<string name="more_item_export_account">Export Account</string>
	<string name="title_activity_messages">Messages</string>
	<string name="errormessage_account_not_selected">Account not selected</string>
	<string name="btn_send">Send</string>
	<string name="text_due_to">Due by %1$s</string>
	<string name="placeholder_empty_transaction">&lt;Empty transaction></string>
	<string name="message_decrypting_in_progress">Decrypting…</string>
	<string name="errormessage_failed_to_encrypt_msg_no_public_key">Failed to encrypt message\nAccount has no public key</string>
	<string name="btn_accounts">Accounts</string>
	<string name="title_activity_new_transaction">New Transaction</string>
	<string name="placeholder_recipient_addr">Enter Address</string>
	<string name="label_amount_with_balance_part_1">Amount (Balance:</string>
	<string name="label_amount_with_balance_part_2">XEM):</string>
	<string name="label_fee_colon">Fee (Min %1$s XEM):</string>
	<string name="placeholder_fee">Enter Fee</string>
	<string name="toolbar_btn_new">New</string>
	<string name="errormessage_not_allowed">Not allowed</string>
	<string name="errormessage_fee_less_than_min">Fee was less than minimum</string>
	<string name="errormessage_failed_to_import_account">Failed to import account</string>
	<string name="btn_share_qr">Share QR</string>
	<string name="email_body_share_account">Scan this QR to import account %s.</string>
	<string name="email_subject_share_account">NEM Exported Account: %s</string>
	<string name="action_chooser_share_account">NEM Account</string>
	<string name="label_checkbox_use_app_password">Use application password</string>
	<string name="errormessage_failed_to_export_account">Failed to export account!</string>
	<string name="title_fragment_my_info">My Info</string>
	<string name="title_fragment_create_invoice">Invoice</string>
	<string name="title_fragment_scan">Scan</string>
	<string name="label_my_address_colon">My Address:</string>
	<string name="btn_copy_address">Copy Address</string>
	<string name="btn_share_address">Share Address</string>
	<string name="label_my_name_colon">My Name:</string>
	<string name="errormessage_account_error">Account error</string>
	<string name="input_hint_enter_amount">Enter Amount</string>
	<string name="btn_create_invoice">Create</string>
	<string name="placeholder_camera_not_accessible">Camera not accessible</string>
	<string name="email_subject_share_address">NEM Address</string>
	<string name="action_chooser_share_address">NEM Address</string>
	<string name="input_hint_current_password">Current Password</string>
	<string name="input_hint_new_password">New Password</string>
	<string name="input_hint_confirm_password">Confirm Password</string>
	<string name="label_amount_with_balance_placeholder">Amount:%1$s</string>
</resources>