<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="@dimen/popup_content_top_padding"
	android:orientation="vertical"
	android:background="@drawable/shape_popup_content"
	>

	<EditText
		android:id="@+id/input_password_existing"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:typeface="normal"
		style="@style/AppTheme.InputGroupDefaultInput"
		android:hint="@string/input_hint_current_password"
		/>

	<org.nem.nac.ui.controls.PasswordInput
		android:id="@+id/input_new_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/AppTheme.InputGroupDefaultInput"
		android:typeface="normal"
		android:hint="@string/input_hint_new_password"
		/>

	<org.nem.nac.ui.controls.ConfirmPasswordInput
		android:id="@+id/input_confirm_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/AppTheme.InputGroupInputBorderless"
		android:typeface="normal"
		android:hint="@string/input_hint_confirm_password"
		/>
</LinearLayout>
